WIP: An attempt to make this image independent on user 'jovyan'

--- a/docker/jupyterlab/jupyterlab-SurfaceTopography/Dockerfile
+++ b/docker/jupyterlab/jupyterlab-SurfaceTopography/Dockerfile
@@ -1,7 +1,9 @@
 # Build from within repository root 
 #
 # Modify conda enviornment running jupyter notebooks
-FROM jupyter/scipy-notebook:latest
+FROM jupyter/minimal-notebook:latest
+
+USER root
 
 COPY --chown=${NB_UID}:${NB_GID} jupyterlab-SurfaceTopography/conda-requirements.in "/home/${NB_USER}/"
 RUN pip install pip-tools
@@ -12,7 +14,6 @@ RUN pip install --quiet --no-cache-dir --requirement "/home/${NB_USER}/conda-req
 
 # FROM imkteksim/dtool-jupyter:latest
 # Install from requirements.txt file
-USER root
 RUN apt-get --yes update && \
     apt-get --yes install \
         clang cmake curl g++ gdb git m4 wget \
@@ -29,28 +30,34 @@ RUN apt-get --yes update && \
         python3-netcdf4 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-USER ${NB_UID}
 
 # Workaround for building packages and introducing an ipykernel outside of the jupyterlab conda environment
 RUN PATH=$(echo "$PATH" | sed -e 's|/opt/conda[^:]*:||g') && ( \
         pip install --no-binary numpy SurfaceTopography && \
         pip install ipykernel && \
-        python3 -m ipykernel install --user --name SurfaceTopography --display-name "Python (SurfaceTopography)" && \
-        echo "c.MultiKernelManager.default_kernel_name = 'SurfaceTopography'" >> ${HOME}/.jupyter/jupyter_notebook_config.py) && \
+        python3 -m ipykernel install --name SurfaceTopography --display-name "Python (SurfaceTopography)") && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
 
 # Workaround for modifying system python outside of the jupyterlab conda environment
 COPY --chown=${NB_UID}:${NB_GID} jupyterlab-SurfaceTopography/requirements.txt "/home/${NB_USER}/"
-RUN PATH="/home/${NB_USER}/.local/bin:$(echo "$PATH" | sed -e 's|/opt/conda[^:]*:||g')" && ( \
+RUN PATH="$(echo "$PATH" | sed -e 's|/opt/conda[^:]*:||g')" && ( \
         pip install --quiet --no-cache-dir --requirement "/home/${NB_USER}/requirements.txt" )
 
-WORKDIR /home/jovyan/work
+COPY jupyterlab-SurfaceTopography/start-wrapper.sh /usr/local/bin/
 
 # Custom fonts config
-COPY jupyterlab-SurfaceTopography/start-wrapper.sh /usr/local/bin/
-RUN mkdir -p /home/${NB_USER}/.config/fontconfig
-COPY jupyterlab-SurfaceTopography/etc/fonts.conf /home/${NB_USER}/.config/fontconfig/fonts.conf
-RUN mkdir -p /home/${NB_USER}/.fonts
-RUN rm -rf /home/${NB_USER}/.cache/matplotlib
+COPY jupyterlab-SurfaceTopography/etc/fonts.conf /etc/fonts/conf.avail/99-injected.conf
+RUN ln -s /etc/fonts/conf.avail/99-injected.conf /etc/fonts/conf.d/99-injected.conf
+RUN mkdir -p /fonts
+
+# Install from requirements.txt file
+RUN apt-get --yes update && \
+    apt-get --yes install fontconfig && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+WORKDIR /home/${NB_USER}/work
+USER ${NB_UID}
+
 CMD ["start-wrapper.sh", "start-notebook.sh"]
