--- a/docker/jupyterlab/jupyterlab-SurfaceTopography/etc/fonts.conf
+++ b/docker/jupyterlab/jupyterlab-SurfaceTopography/etc/fonts.conf
@@ -2,5 +2,5 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <!-- ~/.fonts.conf for per-user font configuration -->
 <fontconfig>
-<dir>~/.fonts</dir>
+<dir>/fonts</dir>
 </fontconfig>
